WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241398
AX ITM: Fix for accessibility/Mac/aria-errormessage.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=241398
Summary
AX ITM: Fix for accessibility/Mac/aria-errormessage.html in isolated tree mode.
Andres Gonzalez
Reported
2022-06-07 19:12:07 PDT
This test is failing in isolated tree mode.
Attachments
Patch
(7.53 KB, patch)
2022-06-07 19:38 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(12.77 KB, patch)
2022-06-09 14:26 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(9.98 KB, patch)
2022-06-10 07:07 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(9.98 KB, patch)
2022-06-10 10:12 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-06-07 19:12:16 PDT
<
rdar://problem/94589697
>
Andres Gonzalez
Comment 2
2022-06-07 19:38:04 PDT
Created
attachment 460081
[details]
Patch
Andres Gonzalez
Comment 3
2022-06-09 14:26:58 PDT
Created
attachment 460144
[details]
Patch
Andres Gonzalez
Comment 4
2022-06-10 07:07:19 PDT
Created
attachment 460159
[details]
Patch
Andres Gonzalez
Comment 5
2022-06-10 10:12:43 PDT
Created
attachment 460161
[details]
Patch
EWS
Comment 6
2022-06-13 10:15:25 PDT
Committed
r295491
(
251496@main
): <
https://commits.webkit.org/251496@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 460161
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug